[package]
name = "rust-notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2.8"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
indexmap = "1.6.0"